Prevent incorrect gallery overflow in Chrome 72
This commit fixes a bug where Chrome 72 incorrectly overflows
gallery items outside of their container. This makes it impossible
to confirm a selection.

--- a/src/style/components/gallery.scss
+++ b/src/style/components/gallery.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
+  // Note: this is important to avoid an overflow bug in Chrome 72 where gallery
+  // items incorrectly extend further than their container.
+  overflow: hidden;
 }
 
 .ars-gallery {
